--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,7 @@ header {
   position: absolute;
   top: 80%;
   left: 50%;
+  width: 90%;
   transform: translate(-50%, -50%);
   text-align: left;
   color: white;
