--- a/src/styles.css
+++ b/src/styles.css
@@ -58,15 +58,15 @@ header {
 .nav-links1 a {
   color: rgb(5, 21, 44);
   text-decoration: none;
-  font-size: 1.2rem;
-  padding: 10px 20px;
+  font-size: 1.5rem;
+  padding: 10px 65px;
   border: 2px solid transparent;
   transition: border-color 0.3s ease-in-out;
   white-space: nowrap;
 }
 
 .nav-links1 a:hover {
-  border-color: #7bb6fd;
+  border-color: #216ac4;
 }
 
 .contact p {
@@ -324,7 +324,8 @@ footer {
 }
 
 .footer-logo img {
-  width: 100px;
+  width: 220px;
+  margin-bottom: 10px;
 }
 
 .footer-contact h4 {
