--- a/src/styles copy.css
+++ b/src/styles copy.css
@@ -104,10 +104,14 @@ header {
 
 .banner-content h1 {
   font-size: 5rem;
+  margin-bottom: -20px;
+  margin-top: -20px;
 }
 
 .banner-content p {
   font-size: 2rem;
+  margin-bottom: 20px;
+
 }
 
 header img {
@@ -118,6 +122,7 @@ header img {
 
 header h1 {
   font-size: 2.5rem;
+  margin-bottom: 10px;
 }
 
 header p {
@@ -162,11 +167,13 @@ nav a {
 }
 
 .about-section {
+  margin-bottom: 30px;
   font-size: 3rem;
 }
 
 .about-section h2 {
   font-size: 2.5rem;
+  margin-bottom: 10px;
 }
 
 .about-section p {
@@ -184,7 +191,7 @@ section {
 
 section h2 {
   font-size: 3rem;
-
+  margin-bottom: 10px;
 }
 
 section p {
@@ -202,12 +209,12 @@ section p {
 
 #services h2 {
   font-size: 2.5rem;
-
+  margin-bottom: 20px;
 }
 
 #services p {
   font-size: 1.1rem;
-
+  margin-bottom: 40px;
 }
 
 .service {
@@ -226,12 +233,12 @@ section p {
   width: 100%;
   height: auto;
   border-radius: 8px;
-
+  margin-bottom: 10px;
 }
 
 .service h3 {
   font-size: 2.5rem;
-
+  margin-bottom: 10px;
 }
 
 .service p {
@@ -246,7 +253,7 @@ section p {
 
 #why-choose-us li {
   font-size: 1.3rem;
-
+  margin-bottom: 10px;
 }
 
 #project-showcase img {
@@ -289,12 +296,13 @@ section p {
 
 .contact-form label {
   font-size: 1.3rem;
-
+  margin-bottom: 5px;
 }
 
 .contact-form input,
 .contact-form textarea {
   padding: 10px;
+  margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 1.2rem;
@@ -324,22 +332,29 @@ footer {
 
 .footer-logo img {
   width: 220px;
+  margin-bottom: 10px;
 }
 
 .footer-contact h4 {
   font-size: 1rem;
   font-weight: normal;
+  margin-bottom: 0px;
 }
 
 .footer-contact p {
   font-weight: bold;
   font-size: 1rem;
+  margin-bottom: 20px;
 }
 
 .footer-copyright {
+  margin-top: 40px; /* Add spacing to separate from content */
   font-size: 0.8rem; /* Adjust font size */
 }
 
+.footer-social {
+  margin-top: 40px;
+}
 
 .footer-social a {
   margin: 0 10px;
