--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 /* Reset some default styles */
 body, h1, h2, h3, p, ul, li {
   margin: 0;
